# $Id$

2008-08-30	Konstantin V. Arkhipov

	* core/Form/Primitives/BasePrimitive.class.php,
	core/Form/Primitives/PrimitiveDomDocument.class.php: getErrorLabel()
	moved down to PrimitiveDomDocument because no one else uses it.

2008-08-28	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
	preserve type for integer values.

	* core/Types/Scalar.class.php: new type introduced.

2008-08-27	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveClass.class.php,
	test/core/PrimitiveClassTest.class.php: of() method and test added.

2008-08-26	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveClass.class.php,
	test/core/PrimitiveClassTest.class.php: new primitive with
	corresponding test introduced.

	* global.inc.php.tpl: don't create useless fake classes in
	__autoload_failed().

2008-08-26	Vladlen Y. Koshelev

	* main/Flow/ViewResolverChain.class.php: useful to resolve views using
	different resolvers.

	* main/Flow/ViewResolver.class.php: viewExists added to interface.

2008-08-21	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: prevent useless join for lazy
	properties too, spotted by Denis Shumeev <denis-shumeev@yandex.ru>.

	* main/Base/AbstractProtoClass.class.php,
	main/Base/LightMetaProperty.class.php: unneeded encapsulant's
	prefetching eliminated, problem was spatted by Denis Shumeev
	<denis-shumeev@yandex.ru>.

2008-08-19	Evgeny V. Kokovikhin

	* main/Net/Http/Cookie.class.php, CookieCollection.class.php: new
	javaisms introduced.

2008-08-17	Garmonbozia Research Group

	* main/Base/CallChain.class.php: helper introduced.

2008-08-14	Konstantin V. Arkhipov

	* core/Types/Time.class.php: toFullString() replaced by toString(),
	toTimeString() introduced.

2008-08-12	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: standalone tag content
	mistakenly typographized; spotted by Sergey M. Skachkov.

	* test/core/FiltersTest.class.php: corresponding test.

2008-08-12	Denis M. Gabaidulin